FIX. remove overflow-x hiden to main container

--- a/docs/grid.css
+++ b/docs/grid.css
@@ -449,7 +449,6 @@ table {
   margin: 0;
   padding: 0;
   max-width: 100vw;
-  overflow-x: hidden;
   width: 100%;
 }
 
