--- a/scss/_containers.scss
+++ b/scss/_containers.scss
@@ -4,7 +4,6 @@
   margin: 0;
   padding: 0;
   max-width: 100vw;
-  overflow-x: hidden;
   width: 100%;
 }
 
